<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_home_screen"
    tools:context=".screen.carer.SearchPeople">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_margin="10dp"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ivSearchProfileImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginStart="30dp"
                android:layout_gravity="bottom|center_horizontal"
                android:background="@drawable/carer_profile_pic"
                android:src="@drawable/ic_carer_profilepic"
                android:contentDescription="@string/tvSenior" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvSearch_FullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/redhat_display_semibold"
                    android:text="@string/care_recipient_fullname"
                    android:textColor="@color/grey5"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvSeniorBarangayCity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="12sp"
                    android:text="@string/tv_senior_barangay_city"/>

                <TextView
                    android:id="@+id/tvSearchUserType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/redhat_display_medium"
                    android:text="@string/tv_userType"
                    android:textColor="@color/dark_green"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tvAge"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/redhat_display_medium"
                    android:text="@string/tvSeniorAge"
                    android:textColor="@color/grey5"
                    android:textSize="14sp"/>

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</LinearLayout>