<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="@color/white">

        <ImageView
            android:id="@+id/slide_image"
            android:layout_width="228dp"
            android:layout_height="242dp"
            android:layout_marginTop="130dp"
            android:contentDescription="@string/logo"
            android:src="@drawable/ic_logo_with_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/slide_heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/red_hatdisplay_light"
                android:text="@string/subtitle"
                android:textAlignment="center"
                android:textColor="@color/grey5"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/slide_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="28dp"
                android:fontFamily="@font/redhat_display_regular"
                android:text="@string/description"
                android:textAlignment="center"
                android:textColor="@color/grey1"
                android:textSize="15sp" />
        </LinearLayout>
</LinearLayout>