<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="350dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add New Game"
            android:textSize="18sp"
            android:fontFamily="@font/redhat_display_regular"
            android:textColor="@color/grey5"
            android:layout_margin="17dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/ibClose"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:src="@drawable/ic_close"
            android:layout_margin="28dp"
            android:background="@color/white"
            android:contentDescription="@string/description_close" />

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Game"
            android:fontFamily="@font/redhat_display_bold"
            android:textColor="@color/grey4"
            android:layout_marginStart="20dp"
            android:textSize="15sp"/>

        <Spinner
            android:id="@+id/spinner_games"
            style="@style/Widget.App.Spinner"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_margin="20dp"
            android:elevation="5dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:layout_gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ibTimePicker"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_set_time"
            android:contentDescription="@string/description_set_time"
            android:elevation="2dp"
            android:src="@drawable/ic_clock" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnAddSchedule"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:text="@string/text_addSchedule"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:fontFamily="@font/redhat_display_bold"
            android:textColor="@color/white"
            android:background="@drawable/rounded_button_login"
            android:backgroundTint="@color/light_green"
            android:layout_margin="10dp"
            android:layout_weight="3.3"/>

    </LinearLayout>

</LinearLayout>