<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    tools:actionBarNavMode="tabs"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/white"
    tools:context=".screen.Login">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_login_image"/>


            <TextView
                android:id="@+id/tvWelcomeToSynapse"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAlignment="center"
                android:fontFamily="@font/redhat_display_bold"
                android:text="@string/login"
                android:textColor="@color/grey5"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:fontFamily="@font/redhat_display_regular"
                android:text="Make senior\'s life easier and safer"
                android:textColor="@color/grey1"
                android:textSize="15sp" />

            <!-- EMAIL -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textVisiblePassword"
                    android:background="@drawable/rounded_text_login"
                    android:fontFamily="@font/redhat_display_regular"
                    android:hint="Email address"
                    android:drawableStart="@drawable/ic_profile"
                    android:drawablePadding="15dp"
                    app:boxStrokeWidthFocused="0dp"
                    android:padding="20dp"
                    android:textColorHint="@color/grey4"
                    android:textSize="18sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <!-- PASSWORD -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                app:endIconMode="password_toggle"
                app:endIconDrawable="@drawable/custom_eye"
                app:endIconTint="@color/grey4"
                app:hintEnabled="false"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_text_login"
                    android:fontFamily="@font/redhat_display_regular"
                    android:hint="@string/login_password"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="15dp"
                    android:inputType="textPassword"
                    android:padding="20dp"
                    android:textColorHint="@color/grey4"
                    android:textSize="18sp"
                    app:boxStrokeWidthFocused="0dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_button_login"
                android:fontFamily="@font/redhat_display_bold"
                android:text="@string/btnLogin"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/redhat_display_regular"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="@color/grey5"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="50dp"
                android:layout_gravity="center">

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey2"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#0071B0"
                    android:textSize="12sp"
                    android:text="© 2022 • OSCA • Mandaluyong City"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_marginTop="10dp"
                    android:background="@color/grey2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center|bottom"
                android:orientation="vertical"
                tools:ignore="NestedWeights">

                <TextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/redhat_display_semibold"
                    android:text="@string/tvDontHaveAccount"
                    android:textAlignment="center"
                    android:textColor="@color/grey5"
                    android:textSize="15sp" />

            </LinearLayout>

        </LinearLayout>

</LinearLayout>
